--- a/tpl/index.gohtml
+++ b/tpl/index.gohtml
@@ -7,6 +7,11 @@
 	<title>Document</title>
 </head>
 <body>
+<form action="/insert" method="post">
+	<input type="text" name="title" autofocus>
+	<input type="text" name="author"> 
+	<input type="submit">
+</form>
 	{{range .}}
 		<p>{{.}}</p>
 	{{end}}
