Not recently tested.  Adding delete functionality.  Fixed the issue with the repeating last entry on the slice of maps.  The issue is the underlying value at each entry was pointing to the same memory space map, which was being updated at each interval.  I changed it so that it was just a slice of strings I believe.

--- a/tpl/index.gohtml
+++ b/tpl/index.gohtml
@@ -9,10 +9,10 @@
 <body>
 <form action="/insert" method="post">
 	<input type="text" name="title" autofocus>
-	<input type="submit">
+	<input type="submit" name="Add to bookshelf">
 </form>
 	{{range .}}
-		<p>{{.}}</p>
+		<p>{{.}} <a href=/delete?title={{.Title | urlescaper}}"</p>
 	{{end}}
 </body>
 </html>
