Functioning but occasionally buggy.  Had to remove Currency field from all structures because this was causing a timeout from Mongo Atlas when attempting to write certain books, most notably Harry Potter and the Prisoner of Azkaban.  In this current commit I attempted to code a no replica / duplicates logic but it doesn't yet work.

--- a/tpl/index.gohtml
+++ b/tpl/index.gohtml
@@ -15,7 +15,17 @@
 	</form>
 
 	{{range .}}
-		<p>{{.Title}} - <a href="/delete?urltitle={{.URLtitle}}">Delete</a></p>
+		<p>{{.Title}}
+		{{if .Author}}
+		 - {{.Author}}
+		{{else}}{{end}}
+		{{if .Price}}
+		  - ${{.Price}}
+		{{else}}{{end}}
+		{{if .BuyLink}}
+		    - <a href="{{.BuyLink}}">Buy</a> 
+		{{else}}{{end}}
+		 <a href="/delete?urltitle={{.URLtitle}}">Delete</a></p>
 	{{end}}
 </body>
 </html>
