Working login, logout, sessions, and connection with MongoDB.  Currently there is a <<Public>> collection in the database that is the default, and then there is one collection for each login email that adds at least one book

--- a/tpl/index.gohtml
+++ b/tpl/index.gohtml
@@ -18,6 +18,8 @@
 		<p>Welcome! <a href="/logout">Logout</a></p>
 	{{else}}
 		<p><a href="/signup">Sign Up</a></p>
+		<p><a href="/login">Login</a></p>
+
 	{{end}}
 
 	{{range .Dlist}}
