--- a/tpl/index.gohtml
+++ b/tpl/index.gohtml
@@ -33,7 +33,8 @@
 		{{if .BuyLink}}
 		    - <a href="{{.BuyLink}}">Buy</a> 
 		{{else}}{{end}}
-		 <a href="/delete?urltitle={{.URLtitle}}">Delete</a></p>
+		<img src="{{.ThumbURL}}" alt="{{.Title}}" width="150">
+		<a href="/delete?urltitle={{.URLtitle}}">Delete</a></p>
 	{{end}}
 </body>
 </html>
