--- a/css/600below.css
+++ b/css/600below.css
@@ -4,10 +4,7 @@
 
 #header  {
     justify-content:    space-between;
-}
-
-.besideHeader {
-    display:            none;
+    position:           static;
 }
 
     /*----------------------*/
@@ -18,36 +15,18 @@ a#logo                  {
     font-size:      1.0rem;
 }
 
-.burgerMenu{
-    display:            flex;
-    height:             80%;
-    position:           relative;
-    right:              1.5rem;
-    align-items:        center;
+/* div#pageFold   { */
+    /* background-image:   url(../images/background-photo-mobile.jpg); */
+/* } */
+
+/* #topSpacer { */
+    /* display:            none; */
+/* } */
+
+#whiteSearchBorder {
+    width:              98vw;
 }
 
-.burgerIcon{
-    height:             80%;
-    position:           relative;
-    right:              -0.30rem;
-}
-
-.burgerIconLink{
-    height:             80%;
-    position:           relative;
-    right:              -0.30rem;
-    top:                0.1rem;
-    padding:            0 15px 0 0;
-}
-
-#menu {
+/* .deleteBelow {
     display:            none;
-}
-
-div#pageFold   {
-    background-image:   url(../images/background-photo-mobile.jpg);
-}
-
-#floatingSpan {
-    top:                8vh;
-}
+} */
