--- a/css/main2.css
+++ b/css/main2.css
@@ -1,10 +1,15 @@
-* {
-    border:             2px solid hotpink;
-}
-
 /*----------------------*/
 /*--------GENERAL-------*/
 /*----------------------*/
+
+body {
+    background-image:   url(bookshelf1.jpg);
+    min-height:         100%;
+    background-repeat:  no-repeat;
+    background-attachment: fixed;
+    background-position:    center;
+    background-size:    cover;
+}
 
 .h1      {
     font-family:        'Roboto', sans-serif;
@@ -13,7 +18,10 @@
 }
 
 a:hover {
-    background-color:   rgba(220, 220, 220, 1);
+    background-color:   rgba(200, 200, 200, 1);
+}
+#submitQuery:hover {
+    background-color:   rgba(200, 200, 200, 1);
 }
 
 /*----------------------*/
@@ -29,13 +37,15 @@ a:hover {
     background-color:   rgb(245, 245, 245, 1.00);
     width:              50vw;
     height:             45px;
+    position:           static;
+    z-index:            0.5;
 }
 
 #header {
     /* FORMAT */
     background-color:   rgb(245, 245, 245, 1.00);
     border-bottom:      0.5px solid rgba(0,0,0,0.3);
-    position:           fixed;
+    position:           static;
     width:              100vw;
     max-width:          1400px;
     height:             45px;
@@ -80,7 +90,7 @@ a#logo, a.menuButton    {
     /*----------------------*/
 
 a.menuButton {
-    padding:       13px 2.0vw;
+    padding:       11px 2.0vw;
 }
 
 #menu {
@@ -106,23 +116,19 @@ a.menuButton {
 /* ---PAGE FOLD IMAGE---*/
 /*----------------------*/
 
-@media (min-width: 601px) {
-    div#pageFold {
-        background-image:   url(../images/background-photo.jpg);
-    }
-}
+/* @media (min-width: 601px) { */
+    /* div#pageFold {
+        background-image:   url(bookshelf1.jpg);
+    } */
+/* } */
 
 div#pageFold   {
-    height:             50vh;
-    background-size:    cover;
-    background-repeat:  no-repeat;
-    background-position:    center top;
-    filter:                 brightness(145%);
-    z-index:            -1;
-
+    height:         100%;
+    min-height:             94vh;
     display:            flex;
     justify-content:    space-around;  
 }
+
 
 div#behindNav {
     height:             4.5vh;
@@ -131,31 +137,146 @@ div#behindNav {
 .centerBody {
     width:              100vw;
     max-width:          1400px;
-    border:             2px solid hotpink;
+    /* border:             2px solid hotpink; */
     
     display:            flex;
-    justify-content:    center;
+    flex-flow:          column nowrap;
+    justify-content:    start;
     align-items:        center;
+    background:         rgba(255,255,255,0.3);
+    height:         100%;
+    background-repeat:  repeat;
+    background-attachment: fixed;
+    /* background-position:    center; */
+    background-size:    cover;
 }
 
-#floatingSpan {
-    display:            inline-block;
+div.spacer {
+    height:             30px;
+}
+
+#searchForm {
+    /* display:            flex; */
+    /* flex-flow:          row nowrap; */
+}
+
+#greySearchDiv {
+    /* height:             3.25rem; */
+    width:              100%;
+    padding:            5px 3px;
+    display:            flex;
+    flex-flow:          row nowrap;
+    justify-content:    space-between;
+    align-items:        center;
+    background-color:   rgba(100, 100, 100, 1);
+    border:             1px solid black;
+    border-radius:      0.3rem;
+}
+
+#searchBar {
+    /* width:              70%; */
+    /* width:              40vw; */
+    height:             2.5rem;
+    /* border:             5px solid black; */
+    border-radius:      0.3rem;
+    margin:             0 0 0 5px;
+    padding:            0 0 0 10px;
+    font-family:        'Roboto', sans-serif;
+    font-weight:        bold;
+    font-size:          1.25rem;
+    flex-grow:          1;
+}
+
+#submitQuery {
+    /* width:              30%; */
+    height:             2.5rem;
+    margin:             0 5px 0 5px;
+    background-color:   rgba(140, 140, 140, 1);
+    border:             1px solid black;
+    border-radius:      0.3rem;
+    padding:            10px;
+    font-family:        'Roboto', sans-serif;
+    font-weight:        bold;
+    cursor:             pointer;
+    flex-shrink:        1;
+}
+
+#whiteSearchBorder {
+    width:              70vw;
+    max-width:          700px;
+    padding:            5px;
+    background-color:   rgba(255, 255, 255, 0.75);
+    border-radius:      0.3rem;
+    border:             1px solid black;
+}
+
+img {
+    border:             2px solid black;
+    height:             150px;
+    width:              auto;
+}
+
+span.book {
+    display:            flex;
+    flex-flow:          row nowrap;
+    margin:             20px;
+}
+
+span.bookDetails {
+    display:            flex;
+    flex-flow:          column nowrap;
+    justify-content:    space-evenly;
+    align-items:        center;
+    background-color:   rgba(150, 150, 150, 1);
+    height:             150px;
+    border-left:        2px solid black;
+    border-top:         2px solid black;
+    border-bottom:      2px solid black;
     /* position:           relative; */
-    /* top:                18vh; */
-    /* left:               10vw;  */
+    /* width:               */
+}
+
+.detail {
+    border-bottom:      1px solid black;
+    height:             25px;
+    width:              300px;
     text-align:         center;
-    width:              40vw;
-    color:              white;
-    background-color:   rgb(0,0,0,0.7);
-    padding:            0.75rem;
+    display:            flex;
+    align-items:        center;
+    justify-content:    center;
 }
-@media (min-width: 1601px) {
-    span#floatingSpan {
-        width:          auto;
-    }
+
+.title {
+    border-bottom:      1px solid black;
+    height:             50px;
+    width:              300px;
+    text-align:         center;
+    display:            flex;
+    align-items:        center;
+    justify-content:    center;
 }
-@media (max-width: 750px) {
-    span#floatingSpan {
-        width:          60vw;
-    }
+
+.ps {
+    font-family:        'Roboto', sans-serif;
 }
+
+div#allBooks {
+    display:            flex;
+    flex-flow:          row wrap;
+    justify-content:    center;
+    /* align-items:        center; */
+}
+
+.italics {
+    font-style:         italic;    
+}
+/* 
+a {
+    z-index:            1;
+} */
+
+div#topSpacer {
+    height:             45px;
+}
+
+
