--- a/css/main2.css
+++ b/css/main2.css
@@ -123,8 +123,8 @@ a.menuButton {
 /* } */
 
 div#pageFold   {
-    height:         100%;
-    min-height:             94vh;
+    /* height:         100%; */
+    /* min-height:             94vh; */
     display:            flex;
     justify-content:    space-around;  
 }
@@ -144,7 +144,8 @@ div#behindNav {
     justify-content:    start;
     align-items:        center;
     background:         rgba(255,255,255,0.3);
-    height:         100%;
+    min-height:         94vh;
+    height:             100%;
     background-repeat:  repeat;
     background-attachment: fixed;
     /* background-position:    center; */
