Completed html and css except for Search Results page.  Need to clean up excess files and rename files away from <<2>> convention

--- a/css/350below.css
+++ b/css/350below.css
@@ -1,8 +1,19 @@
+/*----------------------*/
+/*--------HEADER--------*/
+/*----------------------*/
+
 #header {
     flex-flow:      column nowrap;
     align-items:    center;
     position:       static;
     height:         135px;
+}
+
+#headerLoggedIn {
+    flex-flow:      column nowrap;
+    align-items:    center;
+    position:       static;
+    height:         90px;
 }
 
 #logo {
