--- a/tpl/index.gohtml
+++ b/tpl/index.gohtml
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href="https://fonts.googleapis.com/css?family=Righteous|Roboto:400,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./../css/mcleod-reset.css">
-	<link rel="stylesheet" href="./../css/main2.css">
+	<link rel="stylesheet" href="./../css/main.css">
 	<link rel="stylesheet" href="./../css/600below.css" media="(max-width: 650px)">
 	<link rel="stylesheet" href="./../css/470below.css" media="(max-width: 470px)">
 	<link rel="stylesheet" href="./../css/350below.css" media="(max-width: 350px)">
