--- a/tpl/searchResults.gohtml
+++ b/tpl/searchResults.gohtml
@@ -1,18 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
+	<link href="https://fonts.googleapis.com/css?family=Righteous|Roboto:400,700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="./../css/mcleod-reset.css">
+	<link rel="stylesheet" href="./../css/main.css">
+	<link rel="stylesheet" href="./../css/600below.css" media="(max-width: 650px)">
+	<link rel="stylesheet" href="./../css/470below.css" media="(max-width: 470px)">
+	<link rel="stylesheet" href="./../css/350below.css" media="(max-width: 350px)">
+	<title>My Bookshelf App</title>
 </head>
 <body>
-	<form action="/search" method="get">
-		<input type="text" name="title" autofocus>
-		<input type="submit">
-	</form>
-	{{range .Items}}
-		<p><a href="/add?id={{.ID}}">{{.VolumeInfo.Title}} - {{index .VolumeInfo.Author 0}}</a></p>
-	{{end}}
+	<div id="parentHeader">
+		<span class="besideHeader"></span>
+		{{if .DloggedIn}}
+			<span id="headerLoggedIn">
+				<a href="/" id="logo">MY BOOKSHELF APP</a>
+				<ul id="menu">
+						<li><a class="menuButton" href="/logout">Logout</a></li>
+				</ul>
+			</span>
+		{{else}}
+			<span id="header">
+				<a href="/" id="logo">MY BOOKSHELF APP</a>
+				<ul id="menu">
+					<li><a class="menuButton" href="/signup">Sign Up</a></li>
+					<li><a class="menuButton" href="/login">Login</a></li>
+				</ul>
+			</span>
+		{{end}}	
+		<span class="besideHeader"></span>
+	</div>
+	<div id="pageFold">
+		<span class="besideBody"></span>
+		<span class="centerBody">
+			<div class="spacer deleteBelow"></div>
+			<form action="/search" method="get" id="searchForm">
+				<div id="whiteSearchBorder">
+					<div id="greySearchDiv">
+						<input type="text" name="title" class="searchBar" autofocus="" placeholder="Search Book Title">
+						<input type="submit" value="SEARCH BOOKS" id="submitQuery">
+					</div>
+				</div>
+			</form>
+			<div class="spacer deleteBelow"></div>
+			<span class="besideBook"></span>
+			<div id="allSearchResults">
+				{{range .Results.Items}}
+					<a href="/add?id={{.ID}}">
+						<div class="searchResult">
+							{{.VolumeInfo.Title}} - {{index .VolumeInfo.Author 0}}
+						</div>
+					</a>
+				{{end}}
+			</div>
+			<span class="besideBook"></span>
+		</span>
+		<span class="besideBody"></span>
+	</div>
 </body>
 </html>
